force-app/main/default/objects/Case_Triage_Rule__c/Case_Triage_Rule__c.object-meta.xml
<CustomObject>
    <label>Case Triage Rule</label>
    <pluralLabel>Case Triage Rules</pluralLabel>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Keyword-driven rule used by CaseCategoryService to classify incoming Cases. Maintained as data so rules can change without an Apex deployment.</description>
</CustomObject>