force-app/main/default/objects/Case_Triage_Rule__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>Keyword</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <description>Lower-case keyword matched against Case Subject and Description.</description>
</CustomField>