force-app/main/default/objects/Case_Triage_Rule__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>